Fixed navbar align

--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@
 
 .navbar {
 	display: flex;
-	justify-content: right;
+	justify-content: flex-end;
 	align-items: center;
 	width: 100vw;
 	height: 6vh;
